# serverckan

./: README.md  ckanssh  ckanssh.pub
ckanext-dataset_views/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
ckanext-dataset_views/.github/workflows/: test.yml
ckanext-dataset_views/ckanext/dataset_views/: cli.py  helpers.py  plugin.py  views.py
ckanext-dataset_views/ckanext/dataset_views/assets/: script.js  webassets.yml
ckanext-dataset_views/ckanext/dataset_views/logic/: action.py  auth.py  schema.py  validators.py
ckanext-dataset_views/ckanext/dataset_views/templates/: page_view.html
ckanext-dataset_views/ckanext/dataset_views/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext-dataset_views/ckanext/dataset_views/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext-iauthfunctions/: README.md  setup.cfg  setup.py  setup.py.save
ckanext-iauthfunctions/ckanext/iauthfunctions/: plugin.py
ckanext-my_extension/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
ckanext-my_extension/.github/workflows/: test.yml
ckanext-my_extension/ckanext/my_extension/: plugin.py
ckanext-my_extension/ckanext/my_extension/assets/: script.js  webassets.yml
ckanext-my_extension/ckanext/my_extension/templates/: page_view.html
ckanext-my_extension/ckanext/my_extension/tests/: test_plugin.py
