[metadata]
name = ckanext-dataset_views
version = 0.0.1
description = open data platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EY/ckanext-dataset_views
author = Monika
author_email = monikakes@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN datsets

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             dataset_views = ckanext.dataset_views.plugin:DatasetViewsPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dataset_views/i18n/ckanext-dataset_views.pot
width = 80

[init_catalog]
domain = ckanext-dataset_views
input_file = ckanext/dataset_views/i18n/ckanext-dataset_views.pot
output_dir = ckanext/dataset_views/i18n

[update_catalog]
domain = ckanext-dataset_views
input_file = ckanext/dataset_views/i18n/ckanext-dataset_views.pot
output_dir = ckanext/dataset_views/i18n
previous = true

[compile_catalog]
domain = ckanext-dataset_views
directory = ckanext/dataset_views/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
